[gd_scene load_steps=2 format=3 uid="uid://dflvvy162pbf1"]

[ext_resource type="Script" path="res://src/ui/base/BaseWindow.gd" id="1_w8s4a"]

[node name="BaseWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8s4a")

[node name="DimBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5)

[node name="WindowPanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="WindowPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="WindowPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="WindowPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Default Window Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="WindowPanel/MarginContainer/VBoxContainer/Header"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="WindowPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="VBoxContainer" parent="WindowPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
